--- a/Ejemplo/build.gradle
+++ b/Ejemplo/build.gradle
@@ -8,11 +8,6 @@ jacoco {
 }
 
 jacocoTestReport {
-    reports {
-        xml.enabled = true
-        html.enabled = true
-        csv.enabled = false
-    }
     dependsOn test
 }
 
@@ -24,13 +19,22 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.openjdk.jmh:jmh-core:1.33'
-    annotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.33'
+    implementation 'org.openjdk.jmh:jmh-core:1.35'
+    implementation 'junit:junit:4.13.2'
+    annotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.35'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
     testImplementation 'org.mockito:mockito-core:5.2.0'
     testRuntimeOnly 'org.mockito:mockito-core:5.2.0'
+
+    implementation 'org.openjdk.jmh:jmh-core:1.35'
+    annotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.35'
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 test {
